# point-cloud-segmentation

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: wkd-1.0-exploration.ipynb
notebooks/exploration/: wkd-1.0-pcd-to-gpu.ipynb  wkd-1.1-outlier-filtering.ipynb  wkd-2.1-testing-ransac.ipynb  wkd-2.2-region-growing.ipynb  wkd-3.0-xyz-to-laz.ipynb
point_cloud_segmentation/: __init__.py  dataset.py  features.py  plots.py
point_cloud_segmentation/io/: pcd_file.py
point_cloud_segmentation/modeling/: predict.py  train.py
point_cloud_segmentation/visualizing/: visualise.py
